<resources>
    <string name="app_name">HealthApp</string>
    <string name="health_system">Health System</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="email_hint">Email...</string>
    <string name="pwd_hint">Password...</string>
    <string name="create_account_prompt">Don\'t have an account ?</string>
    <string name="retrieve">Reset</string>
    <string name="forgot_your_password_quiz">Forgot Your Password ?</string>
    <string name="have_an_account_quiz">Have an Account ?</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="avatar">Avatar</string>
    <string name="username">Username</string>
    <string name="message_hint">Message...</string>

    <string-array name="categories">
        <item>Body Mass Index</item>
        <item>Blood Sugar Level</item>
        <item>Blood Pressure</item>
    </string-array>

    <string name="API_KEY">AIzaSyCQDBbaodziyCQ7DKOL_Xd8-kbh5_3MY94</string>
    <string name="title_activity_maps">Map</string>
</resources>
