<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.LoginActivity">

    <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="200dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/banner"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/relativeLayout">

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textSize="32sp"
                  android:textStyle="bold|italic"
                  android:textColor="@android:color/white"
                  android:layout_centerInParent="true"
                  android:text="@string/health_system"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_margin="@dimen/dimen_16dp"
                  android:layout_alignParentEnd="true"
                  android:textColor="@android:color/white"
                  android:layout_alignParentBottom="true"
                  android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                  android:text="@string/login"/>

    </RelativeLayout>

    <EditText
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email_hint"
            android:drawableStart="@drawable/ic_email_amber_24dp"
            android:padding="8dp"
            android:background="@drawable/auth_tf_bg"
            android:ems="10"
            android:id="@+id/emailET"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout"/>
    <EditText
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:padding="8dp"
            android:drawableStart="@drawable/ic_lock_amber_24dp"
            android:background="@drawable/auth_tf_bg"
            android:hint="@string/pwd_hint"
            android:ems="10"
            android:id="@+id/pwdET"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/emailET"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/pwdET" android:id="@+id/linearLayout">

        <TextView android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="2"
                  android:textAppearance="?android:attr/textAppearanceMedium"
                  android:textColor="@android:color/black"
                  android:text="@string/forgot_your_password_quiz"/>

        <TextView android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:id="@+id/resetPwdTV"
                  android:layout_weight="1"
                  android:textAppearance="?android:attr/textAppearanceMedium"
                  android:textColor="@color/colorPrimary"
                  android:text="@string/retrieve"/>

    </LinearLayout>

    <Button
            android:text="@string/login"
            android:layout_width="256dp"
            android:background="@drawable/primary_btn"
            android:textAllCaps="false"
            android:layout_height="wrap_content"
            android:id="@+id/loginBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.503" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="24dp" android:id="@+id/linearLayout2">

        <TextView android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="2"
                  android:textAppearance="?android:attr/textAppearanceMedium"
                  android:textColor="@android:color/black"
                  android:text="@string/create_account_prompt"/>

        <TextView android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:id="@+id/registerTV"
                  android:textAppearance="?android:attr/textAppearanceMedium"
                  android:textColor="@color/colorPrimary"
                  android:text="@string/register"/>

    </LinearLayout>

    <ProgressBar
            android:id="@+id/loginProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>