<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/splash_bg"
        tools:context=".ui.SplashActivity">

    <RelativeLayout android:layout_width="0dp"
                    android:layout_height="140dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" android:id="@+id/relativeLayout">

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textSize="32sp"
                  android:textStyle="bold|italic"
                  android:textColor="@android:color/white"
                  android:layout_centerInParent="true"
                  android:text="@string/health_system"/>
    </RelativeLayout>

    <Button android:text="@string/register"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:background="@drawable/default_btn"
            android:id="@+id/registerBtn"
            android:layout_marginTop="64dp"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <Button android:text="@string/login"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:background="@drawable/default_btn"
            android:id="@+id/loginBtn"
            app:layout_constraintTop_toBottomOf="@+id/registerBtn" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="32dp"
            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintVertical_bias="0.0"/>

</androidx.constraintlayout.widget.ConstraintLayout>